--- a/scss/components/Tables/Cells/Columns.scss
+++ b/scss/components/Tables/Cells/Columns.scss
@@ -3,7 +3,7 @@
 }
 
 .IPAddressColumn {
-    width: 400px;
+    width: 300px;
 }
 
 .LinodeIPAddressColumn {
